--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="filme-principal">
             <div class="container">
                 <h2 class="titulo">CHICAGO P.D</h2>
-                <p class="descricao">O Distrito 21 do Departamento de Polícia de Chicado é composto pelos policiais uniformizados que lidam com o crime nas ruas e pela Unidade de Inteligência, que lida com crimes maiores como tráfico de drogas e assassinatos. </p>
+                <p class="descricao">O Distrito 21 do Departamento de Polícia de Chicago é composto pelos policiais uniformizados que lidam com o crime nas ruas e pela Unidade de Inteligência, que lida com crimes maiores como tráfico de drogas e assassinatos. </p>
             <div class="botoes">
                 <button role="botao" class="botao">
                     <i class="fa-solid fa-play"></i>
